redoing naming conventions for species

--- a/Reformat Files/3 Clean all_seins_all_data Make Cleaned_For_Analysis_All_Data.ipynb
+++ b/Reformat Files/3 Clean all_seins_all_data Make Cleaned_For_Analysis_All_Data.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,9 +378,287 @@
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{' american shad',\n",
+       " ' crab blue crab',\n",
+       " '1 oyster toadfish caught in traffic cone',\n",
+       " '20 ctenophores',\n",
+       " 'alewife',\n",
+       " 'american eel',\n",
+       " 'amphipod',\n",
+       " 'anchovy',\n",
+       " 'anchovy bay n',\n",
+       " 'anchovy striped n',\n",
+       " 'anemone',\n",
+       " 'asian shore crab',\n",
+       " 'atlantic herring',\n",
+       " 'atlantic menhaden',\n",
+       " 'atlantic silverside menidia menidia',\n",
+       " 'atlantic tomcod',\n",
+       " 'atlanticsilverside',\n",
+       " 'bass',\n",
+       " 'bass striped n',\n",
+       " 'bay anchovy',\n",
+       " 'black fingered mud crab',\n",
+       " 'black sea bass',\n",
+       " 'blackfish tautog',\n",
+       " 'blue back',\n",
+       " 'blue muscle',\n",
+       " 'blue mussel',\n",
+       " 'blueback herring',\n",
+       " 'bluecrab',\n",
+       " 'bluefish',\n",
+       " 'bluefish juvenile',\n",
+       " 'bluespotted cornetfish',\n",
+       " 'box crab',\n",
+       " 'clam',\n",
+       " 'clam worm probably nereis spp',\n",
+       " 'clam worm sandworm',\n",
+       " 'colonial tunicate',\n",
+       " 'comb jellies',\n",
+       " 'comb jellies ctenophores',\n",
+       " 'comb jelly',\n",
+       " 'comb jelly beroe',\n",
+       " 'comb jelly leidyi',\n",
+       " 'common shore shrimp',\n",
+       " 'common spider crab',\n",
+       " 'ctenophore',\n",
+       " 'cunner',\n",
+       " 'cunner bergall chogy n',\n",
+       " 'decoration crab',\n",
+       " 'eastern oyster',\n",
+       " 'eel american n',\n",
+       " 'flatfish',\n",
+       " 'flounder',\n",
+       " 'flounder righteye',\n",
+       " 'flounder winter n',\n",
+       " 'ghost shrimp',\n",
+       " 'glass shrimp',\n",
+       " 'golden star colonial tunicate',\n",
+       " 'golden star tunicate',\n",
+       " 'grass shrimp shore shrimp',\n",
+       " 'green crab',\n",
+       " 'green crab carcinus maenas',\n",
+       " 'green crab european',\n",
+       " 'grubby sculpin family',\n",
+       " 'hermit crab',\n",
+       " 'hermit crab longwristed',\n",
+       " 'herring',\n",
+       " 'herring atlantic n',\n",
+       " 'herring blueback n',\n",
+       " 'herring spp pre metamorph',\n",
+       " 'hogchoker',\n",
+       " 'horseshoe crab',\n",
+       " 'horseshoe crab atlantic',\n",
+       " 'hydroid',\n",
+       " 'hydromedusa',\n",
+       " 'hydromedusamoon jelly',\n",
+       " 'isopod',\n",
+       " 'jelly fish',\n",
+       " 'juvenille stripped bass',\n",
+       " 'jvvenilee striped buss',\n",
+       " 'lady crab',\n",
+       " 'larval fish',\n",
+       " 'lions mane jellyfish',\n",
+       " 'lions mane jellyfish cyanea capillata',\n",
+       " 'long clawed hermit crab',\n",
+       " 'mantis shrimp',\n",
+       " 'menhaden',\n",
+       " 'menhaden atlantic n',\n",
+       " 'mole crab',\n",
+       " 'moon jelly',\n",
+       " 'mud crab',\n",
+       " 'mud snail',\n",
+       " 'mudsnail eastern',\n",
+       " 'mullet fish',\n",
+       " 'muslces',\n",
+       " 'mussel',\n",
+       " 'mussel blue',\n",
+       " 'mussel ribbed',\n",
+       " 'naked goby',\n",
+       " 'needlefish',\n",
+       " 'needlefish atlantic n',\n",
+       " 'norther pipefish',\n",
+       " 'norther puffer',\n",
+       " 'northern kingfish',\n",
+       " 'northern sea robin',\n",
+       " 'northern stargazer',\n",
+       " 'oyster',\n",
+       " 'oyster drill',\n",
+       " 'oyster drill snail',\n",
+       " 'oyster toadfish',\n",
+       " 'perch silver n',\n",
+       " 'perch white n',\n",
+       " 'periwinkle',\n",
+       " 'periwinkle common',\n",
+       " 'periwinkle snail',\n",
+       " 'pin fish',\n",
+       " 'pipefish',\n",
+       " 'pipefish northern n',\n",
+       " 'pipefish syngnathinae',\n",
+       " 'pollock',\n",
+       " 'poly worm',\n",
+       " 'porgies',\n",
+       " 'porgy',\n",
+       " 'porgyscup',\n",
+       " 'puffer',\n",
+       " 'puffer northern n',\n",
+       " 'red beard sponge',\n",
+       " 'ribbed mussel',\n",
+       " 'sand shrimp',\n",
+       " 'sandworm',\n",
+       " 'scud',\n",
+       " 'sculpin',\n",
+       " 'scup',\n",
+       " 'sea bass',\n",
+       " 'sea horse hippocampus',\n",
+       " 'sea robin',\n",
+       " 'sea snail',\n",
+       " 'sea squirt',\n",
+       " 'sea squirtsolitary tunicate',\n",
+       " 'seaboard goby',\n",
+       " 'seahorse',\n",
+       " 'sennet',\n",
+       " 'seven spine shrimp',\n",
+       " 'sheepshead porgy',\n",
+       " 'shore crab',\n",
+       " 'shore shrimp',\n",
+       " 'shrimp',\n",
+       " 'shrimp seven spine',\n",
+       " 'shrimp shore and mud',\n",
+       " 'silver perch',\n",
+       " 'silverside',\n",
+       " 'silverside atlantic n',\n",
+       " 'skilletfish',\n",
+       " 'snail',\n",
+       " 'snail eggs',\n",
+       " 'soft shell clam',\n",
+       " 'softshell clam steamer clam',\n",
+       " 'spider crab',\n",
+       " 'sponge',\n",
+       " 'spot lafayette n',\n",
+       " 'spotted hake',\n",
+       " 'spotted whiff',\n",
+       " 'star tunicate',\n",
+       " 'striped anchovy',\n",
+       " 'striped bass',\n",
+       " 'striped burrfish',\n",
+       " 'striped searobin',\n",
+       " 'summer flounder',\n",
+       " 'taotog',\n",
+       " 'tautog',\n",
+       " 'tautogblackfish',\n",
+       " 'the cutest northern puffer ever',\n",
+       " 'toadfish oyster n',\n",
+       " 'tomcod',\n",
+       " 'tomcod atlantic n',\n",
+       " 'true jellies',\n",
+       " 'true jelly',\n",
+       " 'true jelly fish',\n",
+       " 'tube worm',\n",
+       " 'tunicate sponge',\n",
+       " 'tunicates',\n",
+       " 'undetermined jelly',\n",
+       " 'unidentified fish',\n",
+       " 'unidentified shrimp',\n",
+       " 'western mosquito fish',\n",
+       " 'whelk snail',\n",
+       " 'white fingered mud crab',\n",
+       " 'white mullet',\n",
+       " 'white perch',\n",
+       " 'window pain',\n",
+       " 'windowpane flounder',\n",
+       " 'winter flounder',\n",
+       " 'winter flounder righteye',\n",
+       " 'wrasel sea bass'}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(fish_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
    "outputs": [],
    "source": [
     "### Check for fish that have repeats in the excel document. Aka like the sea robin."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def overall_name_changes(fish_list):\n",
+    "    name_changes = { \"anchovy\": \"bay anchovy\",\n",
+    "                    \"menhaden\": \"atlantic menhaden\",\n",
+    "                    'atlantic silverside menidia menidia': 'atlantic silverside','atlanticsilverside': 'atlantic silverside',\n",
+    "                    \"silverside\": \"atlantic silverside\", \n",
+    "                    \"sea bass\": \"black sea bass\",\n",
+    "                    'bluecrab': 'blue crab', 'crab blue crab':'blue crab', ' crab blue crab': 'blue crab'\n",
+    "                    'bluefish juvenile': 'bluefish',\n",
+    "                    \"mussel\": \"unidentified mussel\",\n",
+    "                        'blue muscle': 'blue mussel',\n",
+    "                    'comb jellies': 'comb jelly','comb jellies ctenophores': 'comb jelly', 'ctenophore':'comb jelly',\n",
+    "                    '20 ctenophores': 'ctenophore',\n",
+    "                    \"oyster\":\"eastern oyster\",\n",
+    "                    \"flatfish\": \"unidentified flatfish\",\n",
+    "                        \"flounder\":\"unidentified flounder\",\n",
+    "                            \"flounder righteye\": \"winter flounder\",\n",
+    "                    'ghost shrimp':'glass shrimp','glass shrimp shore shrimp': 'glass shrimp',\n",
+    "                    'golden star colonial tunicate': 'golden star tunicate','star tunicate':'golden star tunicate',\n",
+    "                    'green crab carcinus maenas': 'green crab','green crab european':'green crab',\n",
+    "                    'grubby sculpin family': 'grubby'\n",
+    "                    \"hermit crab\": \"unidentified hermit crab\",\n",
+    "                    'herring spp pre metamorph': 'unidentified herring',\"herring\": \"unidentified herring\",\n",
+    "                        \"blue back\": \"blueback herring\",\n",
+    "                    \"hydra medusa\": \"hydrozoa\", \"hydroid\": \"hydrozoa\", \"hydromedusae\": \"hydrozoa\",\n",
+    "                    \"jelly fish\": \"unidentified jelly fish\",'true jellies': 'unidentified jelly fish',\n",
+    "                    'true jelly': 'unidentified jelly fish', 'true jelly fish': 'unidentified jelly fish',\n",
+    "                        'lions mane jellyfish cyanea capillata': 'lions mane jellyfish',\n",
+    "                    'muslces':'mussel',\n",
+    "                    'norther pipefish': 'northern pipefish', 'pipefish syngnathinae': 'northern pipefish',\"pipefish\":\"northern pipefish\",\n",
+    "                    'the cutest northern puffer ever':'northern puffer','norther puffer': 'northern puffer', 'puffer': 'northern puffer',\n",
+    "                    \"sea horse hippocampus\": \"northern seahorse\", \"sea horse\": \"northern seahorse\",\"seahorse\": \"northern seahorse\",\n",
+    "                    \"sea robin\": \"northern sea robin\",\n",
+    "                    '1 oyster toadfish caught in traffic cone' : 'oyster toadfish', \n",
+    "                    'oyster drill': 'oyster drill snail',\n",
+    "                    'porgyscup': 'porgy', 'scup': 'porgy',\"porgies\":\"porgy\",\n",
+    "                    \"poly worm\": \"sand worm\",\n",
+    "                    \"sea snail\": \"unidentified sea snail\",\n",
+    "                    'sea squirtsolitary tunicate': 'sea squirt',\n",
+    "                    \"shrimp\": \"unidentified shrimp\",\"shrimp shore and mud\": \"unidentified shrimp\",\n",
+    "                        'shrimp seven spine': 'sand shrimp',\"grass shrimp\": \"sand shrimp\",'seven spine shrimp': 'sand shrimp',\n",
+    "                        'common shore shrimp': 'shore shrimp', \"glass shrimp\": \"shore shrimp\",\n",
+    "                    'common spider crab': 'spider crab',\"decoration crab\": \"spider crab\",\n",
+    "                    'juvenille stripped bass': 'striped bass', 'jvvenilee striped buss': 'striped bass', \n",
+    "                    'blackfish tautog': 'tautog', 'taotog': 'tautog','tautogblackfish': 'tautog',\n",
+    "                    'window pain':'windowpane flounder',\n",
+    "                    'winter flounder righteye': 'winter flounder',\n",
+    "                 \n",
+    "                  \n",
+    "                  \n",
+    "                \"snail\": \"unidentified snail\",\"snail eggs\": \"unidentified snail eggs\",\n",
+    "               \"sponge\": \"unidentified sponge\", \"tunicates\": \"tunicate\", \"tunicate sponge\": \"tunicate\",' american shad': 'american shad', 'shore crab': 'asian shore crab',\n",
+    "                   'tomcod': 'atlantic tomcod', 'skillet fish': 'skilletfish', 'bass': 'striped bass', \"clams\":\"clam\",'flounder winter n': 'winter flounder',\n",
+    "                   'herring atlantic n':'atlantic herring','herring blueback n':'blueback herring','mudsnail eastern': \"mud snail\",'mussel blue':'blue mussel','mussel ribbed':'ribbed mussel',\n",
+    "                   'periwinkle common': 'periwinkle','puffer northern n':'northern puffer','hermit crab longwristed':'long clawed hermit crab'}\n",
+    "    for i in range(len(fish_list)):\n",
+    "        if fish_list[i] in name_changes:\n",
+    "            fish_list[i] = name_changes[fish_list[i]]\n",
+    "    return fish_list\n",
+    "    "
    ]
   },
   {
