--- a/Reformat Files/3 Clean all_seins_all_data Make Cleaned_For_Analysis_All_Data.ipynb
+++ b/Reformat Files/3 Clean all_seins_all_data Make Cleaned_For_Analysis_All_Data.ipynb
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,9 +431,10 @@
     "                        'blue muscle': 'blue mussel',\n",
     "                    \"clams\":\"unidentified clam\", \"clam\": \"unidentified clam\",\n",
     "                        'softshell clam steamer clam':'softshell clam','soft shell clam':'softshell clam',\n",
-    "                    'comb jellies': 'comb jelly','comb jellies ctenophores': 'comb jelly', 'ctenophore':'comb jelly','20 ctenophores': 'comb jelly',\n",
+    "                    'comb jelly': 'unidentified comb jelly','comb jellies': 'unidentified comb jelly','comb jellies ctenophores': 'unidentified comb jelly', 'ctenophore':'unidentified comb jelly','20 ctenophores': 'unidentified comb jelly',\n",
     "                    'cunner bergall chogy n':'cunner', \n",
     "                    \"oyster\":\"eastern oyster\",\n",
+    "                    'larval fish': 'unidentified fish',\n",
     "                    \"flatfish\": \"unidentified flatfish\",\n",
     "                        \"flounder\":\"unidentified flounder\",\n",
     "                            \"flounder righteye\": \"winter flounder\",'winter flounder righteye': 'winter flounder','flounder winter n': 'winter flounder',\n",
@@ -441,7 +442,8 @@
     "                    'ghost shrimp':'glass shrimp','glass shrimp shore shrimp': 'glass shrimp',\n",
     "                    'golden star colonial tunicate': 'golden star tunicate','star tunicate':'golden star tunicate',\n",
     "                    'green crab carcinus maenas': 'green crab','green crab european':'green crab',\n",
-    "                    'grubby sculpin family': 'grubby',\n",
+    "                    'sculpin': 'unidentified sculpin',\n",
+    "                        'grubby sculpin family': 'grubby',\n",
     "                    \"hermit crab\": \"unidentified hermit crab\",\n",
     "                        'hermit crab longwristed':'long clawed hermit crab',\n",
     "                    'herring spp pre metamorph': 'unidentified herring',\"herring\": \"unidentified herring\",\n",
@@ -452,6 +454,8 @@
     "                    \"hydra medusa\": \"hydrozoa\", \"hydroid\": \"hydrozoa\", \"hydromedusae\": \"hydrozoa\",\n",
     "                    \"jelly fish\": \"unidentified jelly fish\",'true jellies': 'unidentified jelly fish','true jelly': 'unidentified jelly fish', 'true jelly fish': 'unidentified jelly fish',\n",
     "                        'lions mane jellyfish cyanea capillata': 'lions mane jellyfish',\n",
+    "                        'hydromedusamoon jelly':'moon jelly',\n",
+    "                    'mud crab': 'unidentified mud crab',\n",
     "                    'muslces':'unidentified mussel',\n",
     "                        'mussel blue':'blue mussel',\n",
     "                        'mussel ribbed':'ribbed mussel',\n",
@@ -461,16 +465,17 @@
     "                    \"sea robin\": \"northern sea robin\",\n",
     "                    'spot lafayette n':'spot',\n",
     "                    '1 oyster toadfish caught in traffic cone' : 'oyster toadfish','toadfish oyster n': 'oyster toadfish',  \n",
-    "                    'porgyscup': 'porgy', 'scup': 'porgy',\"porgies\":\"porgy\",\n",
+    "                    'porgy':'unidentified porgy', 'porgies':'unidentified porgy',\n",
+    "                        'porgyscup': 'scup', \n",
     "                    \"poly worm\": \"unidentified polychaete worm\",\n",
-    "                       'clam worm sandworm': 'sandworm', 'sand worm': 'sandworm',\n",
+    "                       'clam worm sandworm': 'sandworm', 'sand worm': 'sandworm','clam worm probably nereis spp':'sandworm',\n",
     "                    \"sea snail\": \"unidentified sea snail\",\"snail\": \"unidentified sea snail\",\"snail eggs\": \"unidentified sea snail\",\n",
     "                        'periwinkle common': 'common periwinkle snail', 'periwinkle': 'common periwinkle snail', 'periwinkle snail': 'common periwinkle snail',\n",
     "                        'mudsnail eastern': \"eastern mud snail\",\n",
     "                        'oyster drill': 'oyster drill snail',\n",
     "                    \"shrimp\": \"unidentified shrimp\",\"shrimp shore and mud\": \"unidentified shrimp\",\n",
     "                        'shrimp seven spine': 'sand shrimp',\"grass shrimp\": \"sand shrimp\",'seven spine shrimp': 'sand shrimp',\n",
-    "                        'common shore shrimp': 'shore shrimp', \"glass shrimp\": \"shore shrimp\",\n",
+    "                        'common shore shrimp': 'shore shrimp', \"glass shrimp\": \"shore shrimp\",'grass shrimp shore shrimp':'shore shrimp',\n",
     "                    'perch silver n': 'silver perch',\n",
     "                    'skillet fish': 'skilletfish',\n",
     "                    \"sponge\": \"unidentified sponge\",\n",
@@ -488,16 +493,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "113"
+       "108"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -534,9 +539,7 @@
        " 'bluefish',\n",
        " 'bluespotted cornetfish',\n",
        " 'box crab',\n",
-       " 'clam worm probably nereis spp',\n",
        " 'colonial tunicate',\n",
-       " 'comb jelly',\n",
        " 'comb jelly beroe',\n",
        " 'comb jelly leidyi',\n",
        " 'common periwinkle snail',\n",
@@ -544,23 +547,19 @@
        " 'eastern mud snail',\n",
        " 'eastern oyster',\n",
        " 'golden star tunicate',\n",
-       " 'grass shrimp shore shrimp',\n",
        " 'green crab',\n",
        " 'grubby',\n",
        " 'hogchoker',\n",
        " 'horseshoe crab',\n",
        " 'hydromedusa',\n",
-       " 'hydromedusamoon jelly',\n",
        " 'hydrozoa',\n",
        " 'isopod',\n",
        " 'lady crab',\n",
-       " 'larval fish',\n",
        " 'lions mane jellyfish',\n",
        " 'long clawed hermit crab',\n",
        " 'mantis shrimp',\n",
        " 'mole crab',\n",
        " 'moon jelly',\n",
-       " 'mud crab',\n",
        " 'mud snail',\n",
        " 'mullet fish',\n",
        " 'naked goby',\n",
@@ -575,13 +574,11 @@
        " 'oyster toadfish',\n",
        " 'pin fish',\n",
        " 'pollock',\n",
-       " 'porgy',\n",
        " 'red beard sponge',\n",
        " 'ribbed mussel',\n",
        " 'sand shrimp',\n",
        " 'sandworm',\n",
        " 'scud',\n",
-       " 'sculpin',\n",
        " 'sea squirt',\n",
        " 'seaboard goby',\n",
        " 'sennet',\n",
@@ -606,6 +603,7 @@
        " 'unidentified anchovy',\n",
        " 'unidentified bass',\n",
        " 'unidentified clam',\n",
+       " 'unidentified comb jelly',\n",
        " 'unidentified fish',\n",
        " 'unidentified flatfish',\n",
        " 'unidentified flounder',\n",
@@ -613,8 +611,11 @@
        " 'unidentified herring',\n",
        " 'unidentified jelly fish',\n",
        " 'unidentified menhaden',\n",
+       " 'unidentified mud crab',\n",
        " 'unidentified mussel',\n",
        " 'unidentified polychaete worm',\n",
+       " 'unidentified porgy',\n",
+       " 'unidentified sculpin',\n",
        " 'unidentified sea snail',\n",
        " 'unidentified shrimp',\n",
        " 'unidentified sponge',\n",
@@ -628,13 +629,22 @@
        " 'wrasel sea bass'}"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "set(overall_name_changes(fish_list))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Should have replaced all the make_name_corrected_names"
    ]
   },
   {
@@ -878,21 +888,21 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.16"
   }
  },
  "nbformat": 4,
