fixing up for data additions

--- a/Reformat Files/1 Seining Google Sheets To all_seins_all_data_reformatted.csv.ipynb
+++ b/Reformat Files/1 Seining Google Sheets To all_seins_all_data_reformatted.csv.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,30 +352,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
     "def reformat_2009(): \n",
-    "    df_2009 = pd.read_csv(csv_2009)\n",
-    "    df_2009 = df_2009.drop([0,1,16])\n",
-    "    curr_date = df_2009.loc[2]\n",
-    "\n",
-    "    for i, date in df_2009.iterrows():\n",
-    "        if pd.isnull(df_2009.loc[i, 'Unnamed: 0']):\n",
-    "            df_2009.loc[i, 'Unnamed: 0'] = curr_date\n",
+    "    df_2009 = pd.read_csv(csv_2009,header=1)\n",
+    "    df_2009 = df_2009[0:53]\n",
+    "    date_list= []\n",
+    "    for i, date in df_2009['Date'].iteritems():\n",
+    "        if date != date:\n",
+    "            date = last_date\n",
     "        else:\n",
-    "            curr_date = df_2009.loc[i, 'Unnamed: 0']\n",
-    "\n",
-    "    df_2009 = df_2009[['Unnamed: 0', 'Seining catch 2009']]\n",
-    "    df_2009 = df_2009.dropna()\n",
-    "    df_2009.rename(columns={\"Unnamed: 0\": \"Date\", \"Seining catch 2009\": \"Common Name\"}, inplace=True)\n",
+    "            last_date = date\n",
+    "        date_list.append(date)\n",
+    "    df_2009['Date'] = date_list\n",
+    "    df_2009.rename(columns={\"Species caught\": \"Common Name\"}, inplace=True)\n",
+    "    df_2009 = df_2009[['Date', 'Common Name']]\n",
     "    return df_2009"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,14 +382,12 @@
     "\n",
     "df_2009 =  add_columns(df_2009, combined_df)\n",
     "\n",
-    "df_2009 = df_2009.drop([2])\n",
-    "\n",
     "combined_df = pd.concat([df_2009,combined_df], axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,11 +413,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_2008 =  reformat_2008()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_2008 = pd.read_csv(csv_2008, header= 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_2008 = df_2008[:38][['Date', 'Species caught']]"
    ]
   },
   {
