--- a/Reformat Files/3 Clean all_seins_all_data Make Cleaned_For_Analysis_All_Data.ipynb
+++ b/Reformat Files/3 Clean all_seins_all_data Make Cleaned_For_Analysis_All_Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,16 +376,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "192"
+       "193"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +461,7 @@
     "                        'mussel ribbed':'ribbed mussel',\n",
     "                    'norther pipefish': 'northern pipefish', 'pipefish syngnathinae': 'northern pipefish',\"pipefish\":\"northern pipefish\",'pipefish northern n': 'northern pipefish',\n",
     "                    'the cutest northern puffer ever':'northern puffer','norther puffer': 'northern puffer', 'puffer': 'northern puffer','puffer northern n':'northern puffer',\n",
-    "                    \"sea horse hippocampus\": \"northern seahorse\", \"sea horse\": \"northern seahorse\",\"seahorse\": \"northern seahorse\",\n",
+    "                    \"sea horse hippocampus\": \"northern seahorse\", \"sea horse\": \"northern seahorse\",\"seahorse\": \"northern seahorse\",'lined seahorse':'northern seahorse',\n",
     "                    \"sea robin\": \"northern sea robin\",\n",
     "                    'spot lafayette n':'spot',\n",
     "                    '1 oyster toadfish caught in traffic cone' : 'oyster toadfish','toadfish oyster n': 'oyster toadfish',  \n",
@@ -493,154 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "108"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(set(overall_name_changes(fish_list)))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'alewife',\n",
-       " 'american eel',\n",
-       " 'american shad',\n",
-       " 'amphipod',\n",
-       " 'anemone',\n",
-       " 'asian shore crab',\n",
-       " 'atlantic herring',\n",
-       " 'atlantic menhaden',\n",
-       " 'atlantic needlefish',\n",
-       " 'atlantic silverside',\n",
-       " 'atlantic tomcod',\n",
-       " 'bay anchovy',\n",
-       " 'black fingered mud crab',\n",
-       " 'black sea bass',\n",
-       " 'blue crab',\n",
-       " 'blue mussel',\n",
-       " 'blueback herring',\n",
-       " 'bluefish',\n",
-       " 'bluespotted cornetfish',\n",
-       " 'box crab',\n",
-       " 'colonial tunicate',\n",
-       " 'comb jelly beroe',\n",
-       " 'comb jelly leidyi',\n",
-       " 'common periwinkle snail',\n",
-       " 'cunner',\n",
-       " 'eastern mud snail',\n",
-       " 'eastern oyster',\n",
-       " 'golden star tunicate',\n",
-       " 'green crab',\n",
-       " 'grubby',\n",
-       " 'hogchoker',\n",
-       " 'horseshoe crab',\n",
-       " 'hydromedusa',\n",
-       " 'hydrozoa',\n",
-       " 'isopod',\n",
-       " 'lady crab',\n",
-       " 'lions mane jellyfish',\n",
-       " 'long clawed hermit crab',\n",
-       " 'mantis shrimp',\n",
-       " 'mole crab',\n",
-       " 'moon jelly',\n",
-       " 'mud snail',\n",
-       " 'mullet fish',\n",
-       " 'naked goby',\n",
-       " 'needlefish',\n",
-       " 'northern kingfish',\n",
-       " 'northern pipefish',\n",
-       " 'northern puffer',\n",
-       " 'northern sea robin',\n",
-       " 'northern seahorse',\n",
-       " 'northern stargazer',\n",
-       " 'oyster drill snail',\n",
-       " 'oyster toadfish',\n",
-       " 'pin fish',\n",
-       " 'pollock',\n",
-       " 'red beard sponge',\n",
-       " 'ribbed mussel',\n",
-       " 'sand shrimp',\n",
-       " 'sandworm',\n",
-       " 'scud',\n",
-       " 'sea squirt',\n",
-       " 'seaboard goby',\n",
-       " 'sennet',\n",
-       " 'sheepshead porgy',\n",
-       " 'shore shrimp',\n",
-       " 'silver perch',\n",
-       " 'skilletfish',\n",
-       " 'softshell clam',\n",
-       " 'spider crab',\n",
-       " 'spot',\n",
-       " 'spotted hake',\n",
-       " 'spotted whiff',\n",
-       " 'striped anchovy',\n",
-       " 'striped bass',\n",
-       " 'striped burrfish',\n",
-       " 'striped searobin',\n",
-       " 'summer flounder',\n",
-       " 'tautog',\n",
-       " 'tube worm',\n",
-       " 'tunicate',\n",
-       " 'undetermined jelly',\n",
-       " 'unidentified anchovy',\n",
-       " 'unidentified bass',\n",
-       " 'unidentified clam',\n",
-       " 'unidentified comb jelly',\n",
-       " 'unidentified fish',\n",
-       " 'unidentified flatfish',\n",
-       " 'unidentified flounder',\n",
-       " 'unidentified hermit crab',\n",
-       " 'unidentified herring',\n",
-       " 'unidentified jelly fish',\n",
-       " 'unidentified menhaden',\n",
-       " 'unidentified mud crab',\n",
-       " 'unidentified mussel',\n",
-       " 'unidentified polychaete worm',\n",
-       " 'unidentified porgy',\n",
-       " 'unidentified sculpin',\n",
-       " 'unidentified sea snail',\n",
-       " 'unidentified shrimp',\n",
-       " 'unidentified sponge',\n",
-       " 'western mosquito fish',\n",
-       " 'whelk snail',\n",
-       " 'white fingered mud crab',\n",
-       " 'white mullet',\n",
-       " 'white perch',\n",
-       " 'windowpane flounder',\n",
-       " 'winter flounder',\n",
-       " 'wrasel sea bass'}"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "set(overall_name_changes(fish_list))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +519,7 @@
     "               'porgyscup': 'porgy', 'scup': 'porgy', 'norther puffer': 'northern puffer', 'norther pipefish': 'northern pipefish', 'ctenophore':'comb jelly',\n",
     "                'ghost shrimp':'glass shrimp','glass shrimp shore shrimp': 'glass shrimp', 'golden star colonial tunicate': 'golden star tunicate',\n",
     "               'lions mane jellyfish cyanea capillata': 'lions mane jellyfish', 'muslces':'mussel', 'pipefish syngnathinae': 'northern pipefish',\n",
-    "               \"porgies\":\"porgy\", \"sea horse hippocampus\": \"northern seahorse\", \"sea horse\": \"northern seahorse\", 'winter flounder righteye': 'winter flounder',\n",
+    "               \"porgies\":\"porgy\", 'lined seahorse':'northern seahorse',\"sea horse hippocampus\": \"northern seahorse\", \"sea horse\": \"northern seahorse\", 'winter flounder righteye': 'winter flounder',\n",
     "               'shrimp seven spine': 'seven spine shrimp', 'star tunicate':'golden star tunicate', 'seven spine shrimp': 'sand shrimp',\n",
     "               'puffer': 'northern puffer', 'northern sea robin': 'sea robin', 'herring spp pre metamorph': 'herring', 'grubby sculpin family': 'grubby',\n",
     "               \"blue back\": \"blueback herring\", \"anchovy\": \"bay anchovy\", \"decoration crab\": \"spider crab\", \"flatfish\": \"unidentified flatfish\",\"flounder\":\"unidentified flatfish\",\n",
@@ -695,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,7 +565,7 @@
     "               'porgyscup': 'porgy', 'scup':'porgy', 'norther puffer': 'puffer', 'norther pipefish': 'northern pipefish', 'ctenophore':'comb jelly',\n",
     "                'ghost shrimp':'shrimp','glass shrimp shore shrimp': 'shrimp', 'golden star colonial tunicate': 'tunicates',\n",
     "               'lions mane jellyfish cyanea capillata': 'jellyfish', 'muslces':'mussel', 'pipefish syngnathinae': 'northern pipefish',\n",
-    "               \"porgies\":\"porgy\",\"seahorse\":\"northern seahorse\", \"sea horse hippocampus\": \"northern seahorse\", \"sea horse\": \"northern seahorse\", 'winter flounder righteye': 'flatfish',\n",
+    "               \"porgies\":\"porgy\",'lined seahorse':'northern seahorse',\"seahorse\":\"northern seahorse\", \"sea horse hippocampus\": \"northern seahorse\", \"sea horse\": \"northern seahorse\", 'winter flounder righteye': 'flatfish',\n",
     "               'shrimp seven spine': 'shrimp', 'star tunicate':'tunicates', 'seven spine shrimp': 'shrimp','pipefish': 'northern pipefish',\n",
     "               'northern puffer': 'puffer', 'northern sea robin': 'sea robin', 'herring spp pre metamorph': 'herring', 'grubby sculpin family': 'grubby',\n",
     "               \"blue back\": \"herring\", 'alewife':'herring', 'atlantic herring': 'herring', 'blueback herring': 'herring',\n",
@@ -738,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -767,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -794,7 +647,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -803,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -844,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -877,12 +737,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv('../Created CSVs/Cleaned_For_Analysis_All_Data.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
